<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/group_system"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/hex"
            android:layout_weight="1"

            android:id="@+id/radio_hex"
            />
        <RadioButton
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/dec"
            android:checked="true"
            android:layout_weight="1"
            android:id="@+id/radio_dec"
            />
        <RadioButton
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/oct"
            android:layout_weight="1"
            android:id="@+id/radio_oct"
            />
        <RadioButton
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/bin"
            android:layout_weight="1"
            android:id="@+id/radio_bin"
            />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_first"
        android:inputType="numberDecimal"
        android:digits="0123456789ABCDEF-."
        android:textSize="22sp"
        android:hint="@string/first_parameter"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:background="@drawable/backer"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_second"
        android:digits="0123456789ABCDEF-."
        android:layout_marginTop="4sp"
        android:maxLines="1"
        android:hint="@string/param_second"
        android:imeOptions="actionDone"
        android:textSize="22sp"
        android:background="@drawable/backer"
        android:inputType="number"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/group_action"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_weight="1"
            android:id="@+id/radio_add"
            />
        <RadioButton
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/sub"
            android:checked="true"
            android:layout_weight="1"
            android:id="@+id/radio_sub"
            />
        <RadioButton
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/mul"
            android:layout_weight="1"
            android:id="@+id/radio_mul"
            />
        <RadioButton
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/div"
            android:layout_weight="1"
            android:id="@+id/radio_div"
            />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_equal"
        style="?borderlessButtonStyle"
        android:textColor="@color/color_btn_text"
        android:layout_marginLeft="3sp"
        android:layout_marginRight="3sp"
        android:background="@drawable/btn"
        android:text="@string/equation"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="20sp"
        android:id="@+id/equation_generate"

        android:orientation="vertical"
        android:layout_height="0sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_height="0sp">

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:textSize="22sp"
                android:gravity="center"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:id="@+id/param1_text"
                android:gravity="bottom|center"
                android:text="@string/_110"
                android:textColor="@color/colorPrimaryDark"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_height="0sp">

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:id="@+id/sign"
                android:text="@string/subtract"
                android:textSize="27sp"
                android:textColor="#000000"
                android:gravity="center|right"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:id="@+id/param2_text"
                android:gravity="bottom|center"
                android:text="@string/_101"
                android:textColor="@color/colorPrimaryDark"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:background="#000000"
            android:layout_marginTop="2sp"
            android:layout_height="3sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_height="0sp">
            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                />
            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:text="@string/_9"
                android:id="@+id/answerView"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center|top"
                android:layout_marginTop="6sp"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>