<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/parent_layout"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/color"
                android:layout_marginTop="1sp"
                android:id="@+id/number_system"
                android:layout_height="?listPreferredItemHeight">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:text="@string/number_system_conversion"
                    android:layout_weight="5"
                    android:textSize="23sp"
                    android:textColor="#FFFFFF"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="2"
                    android:textColor="#FFFFFF"
                    android:text="@string/this_will_help_you_to_convert_one_number_system_to_another"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/color2"
                android:id="@+id/math"
                android:layout_marginTop="1sp"
                android:layout_height="?listPreferredItemHeight">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="5"
                    android:text="@string/mathematics_with_number_system"
                    android:textSize="23sp"
                    android:textColor="#FFFFFF"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="2"
                    android:textColor="#FFFFFF"
                    android:text="@string/this_will_help_you_on_mathematical_operation"

                    />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>