<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert_from"
        android:textSize="23sp"
        android:textColor="#000000"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/radio_group_from"

        android:layout_marginTop="10sp"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="0sp"
            android:layout_weight="1"
            android:text="@string/hex"
            android:id="@+id/from_hex"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_width="0sp"
            android:layout_weight="1"
            android:text="@string/dec"
            android:checked="true"
            android:id="@+id/from_dec"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_width="0sp"
            android:id="@+id/from_oct"
            android:layout_weight="1"
            android:text="@string/oct"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_width="0sp"
            android:layout_weight="1"
            android:text="@string/bin"
            android:id="@+id/from_bin"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input"
        android:inputType="numberDecimal"
        android:digits="0123456789ABCDEF."
        android:layout_marginTop="10sp"
        android:textSize="22sp"
        android:hint="@string/parameter"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:background="@drawable/backer"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/convert_to"
        android:textSize="23sp"
        android:textColor="#000000"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/radio_group_to"
        android:layout_marginTop="10sp"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="0sp"
            android:layout_weight="1"
            android:text="@string/hex"
            android:id="@+id/to_hex"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_width="0sp"
            android:layout_weight="1"
            android:text="@string/dec"
            android:checked="true"
            android:id="@+id/to_dec"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_width="0sp"
            android:id="@+id/to_oct"
            android:layout_weight="1"
            android:text="@string/oct"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_width="0sp"
            android:layout_weight="1"
            android:text="@string/bin"
            android:id="@+id/to_bin"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Convert"
        android:textColor="@color/color_btn_text"
        style="?borderlessButtonStyle"
        android:background="@drawable/btn"
        android:layout_marginLeft="3sp"
        android:layout_marginRight="3sp"
        android:layout_marginTop="18sp"
        android:id="@+id/convert_button"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5sp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0sp"
            android:id="@+id/from_flag"
            android:layout_weight="1"
            android:text="DEC:"
            android:textColor="#000000"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:text="255"
            android:layout_weight="10"
            android:textColor="#000000"
            android:gravity="center"
            android:maxLines="1"
            android:id="@+id/from_tex"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
        android:layout_height="1sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5sp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0sp"
            android:id="@+id/to_flag"
            android:layout_weight="1"
            android:text="DEC:"
            android:textColor="#000000"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:text="255"
            android:layout_weight="10"
            android:textColor="#000000"
            android:gravity="center"
            android:maxLines="1"
            android:id="@+id/to_tex"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0sp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_details"
        style="?borderlessButtonStyle"
        android:layout_marginLeft="3sp"
        android:layout_marginRight="3sp"
        android:background="@drawable/btn"
        android:textColor="@color/color_btn_text"
        android:text="Details"
        android:layout_marginTop="4sp"
        />

</LinearLayout>